<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_activity"
    android:orientation="vertical"
    tools:context=".allFragment.FragmentMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_shedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/biceps"
            android:text="@string/button_shedule"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_muscule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/han"
            android:text="@string/button_go_muscule"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/button_motiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/cupnew"
            android:text="@string/motiv"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/about"
            android:text="@string/button_go_info"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/button_b_ack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/finish"
            android:text="@string/button_finish"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/stroka"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/stroka1"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</LinearLayout>
